--- a/D_Light_Test1/Base.lproj/Main.storyboard
+++ b/D_Light_Test1/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -323,72 +323,108 @@
                                 <state key="normal" title="Singlet">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Singlet:" destination="Ggn-UF-x71" eventType="touchUpInside" id="JFC-Fs-lxa"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hjq-7U-r65">
                                 <rect key="frame" x="416" y="101" width="70" height="84"/>
                                 <state key="normal" title="Shirt">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Shirt0:" destination="Ggn-UF-x71" eventType="touchUpInside" id="YYj-YN-wgZ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3GU-cu-abR">
                                 <rect key="frame" x="494" y="101" width="70" height="84"/>
                                 <state key="normal" title="Long">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Shirt1:" destination="Ggn-UF-x71" eventType="touchUpInside" id="9Oc-8L-2x1"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zek-sJ-hpt">
                                 <rect key="frame" x="338" y="208" width="70" height="84"/>
                                 <state key="normal" title="Shorts">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Shorts0:" destination="Ggn-UF-x71" eventType="touchUpInside" id="BX5-0E-CdS"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3w-Ez-x78">
                                 <rect key="frame" x="416" y="208" width="70" height="84"/>
                                 <state key="normal" title="shorts2">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Shorts1:" destination="Ggn-UF-x71" eventType="touchUpInside" id="Mn0-iJ-Vjb"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DWy-fo-M0X">
                                 <rect key="frame" x="494" y="208" width="70" height="84"/>
                                 <state key="normal" title="Pants">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Pants:" destination="Ggn-UF-x71" eventType="touchUpInside" id="aLd-cv-Cs2"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="loc-dn-UNT">
                                 <rect key="frame" x="338" y="329" width="70" height="84"/>
                                 <state key="normal" title="Nikes">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Shoes0:" destination="Ggn-UF-x71" eventType="touchUpInside" id="Ka4-i6-CaO"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="huY-FK-IGh">
                                 <rect key="frame" x="416" y="329" width="70" height="84"/>
                                 <state key="normal" title="Adidas">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Shoes1:" destination="Ggn-UF-x71" eventType="touchUpInside" id="qj7-OI-xFe"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gfb-lb-Ot7">
                                 <rect key="frame" x="494" y="329" width="70" height="84"/>
                                 <state key="normal" title="Thongs">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="Shoes2:" destination="Ggn-UF-x71" eventType="touchUpInside" id="Dbp-1f-Ejh"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NAT-wD-p8K">
                                 <rect key="frame" x="338" y="450" width="70" height="84"/>
                                 <state key="normal" title="glasses">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="glasses:" destination="Ggn-UF-x71" eventType="touchUpInside" id="nG6-HH-CxK"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Zm-Bn-EwV">
                                 <rect key="frame" x="416" y="450" width="70" height="84"/>
                                 <state key="normal" title="Hat">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="hat0:" destination="Ggn-UF-x71" eventType="touchUpInside" id="Je0-2X-VQI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4g9-tq-zdw">
                                 <rect key="frame" x="494" y="450" width="70" height="84"/>
                                 <state key="normal" title="Bling">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="hat1:" destination="Ggn-UF-x71" eventType="touchUpInside" id="h3B-yA-J1B"/>
+                                </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="vbj-1n-fQk">
                                 <rect key="frame" x="400" y="68" width="166" height="31"/>
@@ -406,6 +442,20 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="gB4-8Y-T5n"/>
+                    <connections>
+                        <outlet property="baseView" destination="aWX-7Y-AOu" id="n5q-dV-uxc"/>
+                        <outletCollection property="top" destination="jQD-03-Kvn" id="7nW-sC-yCk"/>
+                        <outletCollection property="top" destination="Hjq-7U-r65" id="Gzt-Es-Fet"/>
+                        <outletCollection property="top" destination="3GU-cu-abR" id="ZPO-zl-ooC"/>
+                        <outletCollection property="bottom" destination="zek-sJ-hpt" id="TXS-2M-anO"/>
+                        <outletCollection property="bottom" destination="o3w-Ez-x78" id="dcI-9B-LuX"/>
+                        <outletCollection property="bottom" destination="DWy-fo-M0X" id="NUL-WX-d49"/>
+                        <outletCollection property="shoes" destination="loc-dn-UNT" id="R1p-jI-x1Z"/>
+                        <outletCollection property="shoes" destination="huY-FK-IGh" id="WPA-cY-UxR"/>
+                        <outletCollection property="shoes" destination="Gfb-lb-Ot7" id="sc4-Ge-vEX"/>
+                        <outletCollection property="hat" destination="8Zm-Bn-EwV" id="C13-ly-AJw"/>
+                        <outletCollection property="hat" destination="4g9-tq-zdw" id="XSd-My-Wz7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eaO-MW-3fa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1774,7 +1824,6 @@
         <image name="sunscreen.gif" width="250" height="333"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="GiL-OM-iIk"/>
         <segue reference="QnE-VF-aHs"/>
         <segue reference="GiL-OM-iIk"/>
         <segue reference="jXW-zi-QpK"/>
